Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89872

Error with instancing in depth pre-pass and shadows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 Alpha, 6.1
    • 6.1
    • Quick: 3D
    • None
    • macOS, Windows
    • 4
    • 1031f58b7542b7f30aca999d19c01becdce0c154 (qt/qtquick3d/dev) 1a8f44382f52df1b468b3622bb725c2da079c692 (qt/qtquick3d/6.1)

      The instancing/Primitives.qml lancelot scene produces several warnings like this under Metal:

      Failed to create render pipeline state: Vertex attribute qt_instanceTransform0(8) is missing from the vertex descriptor
      Failed to build graphics pipeline state
      Failed to create render pipeline state: Vertex attribute qt_instanceTransform0(7) is missing from the vertex descriptor
      Failed to build graphics pipeline state

      and similarly under D3D:

      Failed to create input layout: Error 0x80070057: The parameter is incorrect.Failed to build graphics pipeline state

      The same is visible with the BenchmarkDemo: enable both instancing and shadows on Windows with D3D => crash

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            vgt Eirik Aavitsland
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes