Instancing: add support for depth and shadow passes

Fixes: QTBUG-89872
Pick-to: 6.1
Change-Id: I8d5d8339a676233757dd241d0f55b39b6a812b1d
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>