src/runtimerender/rendererimpl/qssgrenderableobjects_p.h
@@ -320,6 +320,7 @@ struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGSubsetRenderable : public QSSGRenderabl
         Q_ASSERT(renderableFlags.isCustomMaterialMeshSubset());
         return static_cast<const QSSGRenderCustomMaterial &>(material);
     }
+    bool prepareInstancing(QSSGRhiContext *rhiCtx);
 };
 
 Q_STATIC_ASSERT(std::is_trivially_destructible<QSSGSubsetRenderable>::value);
